--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-beta3",
     "next": "11.1.2",
+    "nodemon": "^2.0.12",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
